; ModuleID = '/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_compressEnd.c'
source_filename = "/home/carl/AnghaBench/zstd/lib/compress/extr_zstd_compress.c_ZSTD_compressEnd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64, i64, %struct.TYPE_8__ }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i64 }

@ZSTD_CONTENTSIZE_UNKNOWN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [36 x i8] c"end of frame : controlling src size\00", align 1
@srcSize_wrong = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [52 x i8] c"error : pledgedSrcSize = %u, while realSrcSize = %u\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZSTD_compressEnd(%struct.TYPE_9__* %0, i8* %1, i64 %2, i8* %3, i64 %4) #0 {
  %6 = alloca %struct.TYPE_9__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.TYPE_9__* %0, %struct.TYPE_9__** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i64 %4, i64* %10, align 8
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %14 = load i8*, i8** %7, align 8
  %15 = load i64, i64* %8, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i64, i64* %10, align 8
  %18 = call i64 @ZSTD_compressContinue_internal(%struct.TYPE_9__* %13, i8* %14, i64 %15, i8* %16, i64 %17, i32 1, i32 1)
  store i64 %18, i64* %12, align 8
  %19 = load i64, i64* %12, align 8
  %20 = call i32 @FORWARD_IF_ERROR(i64 %19)
  %21 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = load i64, i64* %12, align 8
  %24 = getelementptr inbounds i8, i8* %22, i64 %23
  %25 = load i64, i64* %8, align 8
  %26 = load i64, i64* %12, align 8
  %27 = sub i64 %25, %26
  %28 = call i64 @ZSTD_writeEpilogue(%struct.TYPE_9__* %21, i8* %24, i64 %27)
  store i64 %28, i64* %11, align 8
  %29 = load i64, i64* %11, align 8
  %30 = call i32 @FORWARD_IF_ERROR(i64 %29)
  %31 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %32 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %31, i32 0, i32 2
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %42

37:                                               ; preds = %5
  %38 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %39 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = icmp eq i64 %40, 0
  br label %42

42:                                               ; preds = %37, %5
  %43 = phi i1 [ false, %5 ], [ %41, %37 ]
  %44 = xor i1 %43, true
  %45 = zext i1 %44 to i32
  %46 = call i32 @assert(i32 %45)
  %47 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %48 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %47, i32 0, i32 0
  %49 = load i64, i64* %48, align 8
  %50 = icmp ne i64 %49, 0
  br i1 %50, label %51, label %77

51:                                               ; preds = %42
  %52 = load i64, i64* @ZSTD_CONTENTSIZE_UNKNOWN, align 8
  %53 = icmp eq i64 %52, -1
  %54 = zext i1 %53 to i32
  %55 = call i32 @ZSTD_STATIC_ASSERT(i32 %54)
  %56 = call i32 @DEBUGLOG(i32 4, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %61 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %60, i32 0, i32 1
  %62 = load i64, i64* %61, align 8
  %63 = add nsw i64 %62, 1
  %64 = icmp ne i64 %59, %63
  %65 = zext i1 %64 to i32
  %66 = load i32, i32* @srcSize_wrong, align 4
  %67 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %68 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %67, i32 0, i32 0
  %69 = load i64, i64* %68, align 8
  %70 = trunc i64 %69 to i32
  %71 = sub i32 %70, 1
  %72 = load %struct.TYPE_9__*, %struct.TYPE_9__** %6, align 8
  %73 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %72, i32 0, i32 1
  %74 = load i64, i64* %73, align 8
  %75 = trunc i64 %74 to i32
  %76 = call i32 @RETURN_ERROR_IF(i32 %65, i32 %66, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0), i32 %71, i32 %75)
  br label %77

77:                                               ; preds = %51, %42
  %78 = load i64, i64* %12, align 8
  %79 = load i64, i64* %11, align 8
  %80 = add i64 %78, %79
  ret i64 %80
}

declare dso_local i64 @ZSTD_compressContinue_internal(%struct.TYPE_9__*, i8*, i64, i8*, i64, i32, i32) #1

declare dso_local i32 @FORWARD_IF_ERROR(i64) #1

declare dso_local i64 @ZSTD_writeEpilogue(%struct.TYPE_9__*, i8*, i64) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @ZSTD_STATIC_ASSERT(i32) #1

declare dso_local i32 @DEBUGLOG(i32, i8*) #1

declare dso_local i32 @RETURN_ERROR_IF(i32, i32, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
